# athena-extensions

./: README.md
athena-dropbox-1.4.0/: COPYING  ChangeLog  Makefile.in  NEWS  README  config.h.in  configure  configure.in  dropbox.in
athena-dropbox-1.4.0/.pc/add-http-proxy-option.patch/: dropbox.in
athena-dropbox-1.4.0/.pc/display-error-string-when-download-failed.patch/: dropbox.in
athena-dropbox-1.4.0/.pc/do-not-hardcode-dropboxd-path.patch/: dropbox.in
athena-dropbox-1.4.0/.pc/dropbox-update.patch/: dropbox.in
athena-dropbox-1.4.0/.pc/non-interactive-update.patch/: dropbox.in
athena-dropbox-1.4.0/.pc/use-dpkg-to-select-platform.patch/: dropbox.in
athena-dropbox-1.4.0/data/: Makefile.in
athena-dropbox-1.4.0/debian/: athena-dropbox.lintian-overrides  athena-dropbox.postinst  changelog  control  copyright  rules  watch
athena-dropbox-1.4.0/src/: Makefile.am  Makefile.in  async-io-coroutine.h  athena-dropbox-hooks.c  athena-dropbox-hooks.h  athena-dropbox.c  athena-dropbox.h  dropbox-client-util.c  dropbox-client-util.h  dropbox-client.c  dropbox-client.h  dropbox-command-client.c  dropbox-command-client.h  dropbox.c  g-util.h
athena-open-terminal-0.19/: Makefile  Makefile.am  Makefile.in  aclocal.m4  athena-open-terminal.schemas.in  config.h  config.status  configure  libtool  ltmain.sh
athena-open-terminal-0.19/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
athena-open-terminal-0.19/debian/: athena-open-terminal.substvars  autoreconf.after  autoreconf.before  changelog  control  files  watch
athena-open-terminal-0.19/po/: .intltool-merge-cache  Makefile  Makefile.in  POTFILES  ar.gmo  as.po  athena-open-terminal.pot  be.gmo  be@latin.po  bg.gmo  bn_IN.gmo  bn_IN.po  ca.gmo  cs.gmo  cs.po  da.po  de.gmo  dz.gmo  en_GB.gmo  es.gmo  es.po  et.gmo  eu.gmo  fi.po  fr.po  gl.gmo  gl.po  gu.po  id.gmo  ja.gmo  ja.po  ka.gmo  ka.po  kn.gmo  kn.po  lt.gmo  lt.po  mk.gmo  mk.po  ml.gmo  (+25 more)
athena-open-terminal-0.19/src/: Makefile  Makefile.am  Makefile.in  athena-open-terminal.c  athena-open-terminal.h  athena-open-terminal.lo  eel-gnome-extensions.h  eel-gnome-extensions.lo  libathena-open-terminal.la  open-terminal.lo
athena-open-terminal-0.19/src/.libs/: libathena-open-terminal.la  libathena-open-terminal.lai
athena-open-terminal-0.20/: NEWS  configure.in
athena-open-terminal-0.20/debian/: README.Debian  changelog  copyright  rules
athena-open-terminal-0.20/po/: ChangeLog  POTFILES.in  ar.po  be.po  bg.po  ca.po  ca@valencia.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  et.po  eu.po  he.po  hu.po  id.po  it.po  ko.po  ml.po  mr.po  nb.po  ne.po  nl.po  or.po  pl.po  pt_BR.po  ru.po  sl.po  sr@Latn.po  te.po  th.po  vi.po  zh_CN.po  zh_TW.po
athena-open-terminal-0.20/src/: open-terminal.c
athena-python-1.1/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  athena-python.pc.in  config.h.in  configure  configure.in
athena-python-1.1/debian/: NEWS  README.Debian  changelog  control  control.in  dirs  lintian-overrides  rules  watch
athena-python-1.1/docs/: Makefile.am  Makefile.in
athena-python-1.1/docs/reference/: athena-python-class-reference.xml  athena-python-column-provider.xml  athena-python-column.xml  athena-python-enum-reference.xml  athena-python-file-info.xml  athena-python-info-provider.xml  athena-python-location-widget-provider.xml  athena-python-menu-item.xml  athena-python-menu-provider.xml  athena-python-menu.xml  athena-python-operation-result.xml  athena-python-overview-example.xml  athena-python-overview-methods.xml  athena-python-overview.xml  athena-python-property-page-provider.xml  athena-python-property-page.xml  athena-python-provider-reference.xml  athena-python-ref.xml
athena-python-1.1/examples/: Makefile.in  README  background-image.py  block-size-column.py  location-widget-provider.py  md5sum-property-page.py  open-terminal.py  submenu.py  update-file-info-async.py
athena-python-1.1/src/: Makefile.am  Makefile.in  athena-python-object.c  athena-python-object.h  athena-python.c  athena-python.h
file-roller-3.4.2/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.ac  file-roller.spec  gnome-doc-utils.make
file-roller-3.4.2/athena/: Makefile.am  Makefile.in  athena-fileroller.c  athena-fileroller.h  fileroller-module.c
file-roller-3.4.2/copy-n-paste/: Makefile.in
file-roller-3.4.2/data/: Makefile.in  file-roller.desktop.in  packages.match
file-roller-3.4.2/debian/: changelog  control  control.in  rules
file-roller-3.4.2/help/: Makefile.in
file-roller-3.4.2/po/: ChangeLog  POTFILES.in  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  csb.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  fy.po  ga.po  gl.po  gu.po  he.po  (+61 more)
file-roller-3.4.2/src/: Makefile.in  egg-macros.h  fr-window.c  preferences.h  server.c
gksu-2.0.2/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  gksu.desktop  gksu.desktop.in
gksu-2.0.2/.pc/02_format_security.patch/gksu/: gksu.c
gksu-2.0.2/.pc/fix_nautilus_extension_dirs.patch/nautilus-gksu/: Makefile.am  Makefile.in
gksu-2.0.2/athena-gksu/: Makefile.am  Makefile.in  libathena-gksu.c
gksu-2.0.2/debian/: changelog  control  control.in  gksu.install  rules  watch
gksu-2.0.2/debian/patches/: fix_nautilus_extension_dirs.patch  series  translations.patch
gksu-2.0.2/debian/pos/: ca.po  de.po  hu.po  ja.po  ko.po  pt_BR.po  ru.po
gksu-2.0.2/debian/source/: include-binaries
gksu-2.0.2/gksu/: Makefile.am  Makefile.in  defines.h  gksu.c
gksu-2.0.2/man/: Makefile.am  Makefile.in
gksu-2.0.2/po/: POTFILES.in  ar.po  cs.po  da.po  es.po  fr.po  gl.po  it.po  lt.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sv.po  th.po  xh.po  zh_CN.po
gnome3-emblems-0.1.0/: README.md  emblems.py
gnome3-emblems-0.1.0/debian/: changelog  control  copyright  install  rules  watch
(+462 files in other folders)
